# rust_sat

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  received_data.json  test.html
Starlink/: params.py  starlink_delay.py  test1.csv
Starlink/results/: distance_storage.csv
data/: plot.py  rec.py  received_data.json
examples/: old_tuiapp.rs
src/: celestrak.rs  cfg_ui.rs  datalink.rs  groundstation.rs  main.rs  render_satellite.rs  satellite.rs  socket.rs  tuiapp.rs  zmq_comm.rs
src/util/: distance.rs  mod.rs
