[package]
name = "rust_sat"
version = "0.3.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[target.wasm32-unknown-unknown]
runner = "wasm-server-runner"




[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rmp = ">=0.8"
rmp-serde = ">=0.15"

bevy_egui = "^0.20"
bevy_reflect = "^0.10"
nalgebra = "*" 
reqwest = { version = ">=0.11", features = ["json"] }
tokio = { version = ">=1", features = ["full"] }
serde_json = "*"
serde_derive = "*"
serde = "*"
egui_extras= {version = "^0.21", features=["svg"]}

sgp4 = ">0.6"
map_3d = ">=0.1.5"
chrono = ">=0.4"
rfd = ">=0.10"

bevy_svg = { git= "https://github.com/Weasy666/bevy_svg", default-features = false, features = ["2d"] }
bevy_retro_camera = { path="./vendored/bevy_retro_camera" }
bevy_prototype_lyon= "^0.8.0"
bevy_embedded_assets = "^0.7.0"

zmq = {version = ">=0.9.2", features=["vendored"],optional = true}


[features]
default = ["zmq_comm"]
zmq_comm = ["dep:zmq"]

[patch.crates-io]
tuirealm =  {git="https://github.com/veeso/tui-realm"}

[dependencies.bevy]
version = "^0.10"
# Disable the default features if there are any that you do not want
default-features = false
features = [
  # These are the default features:
  # (re-enable whichever you like)

  # Bevy functionality:
  "bevy_asset",         # Assets management
  "bevy_scene",         # Scenes management
  "bevy_gilrs",         # Gamepad input support
  "bevy_audio",         # Builtin audio
  "bevy_winit",         # Window management
  "animation",          # Animation support
  "x11",                # Linux: Support X11 windowing system
  "filesystem_watcher", # Asset hot-reloading
  #"render",             # Graphics Rendering

  ## "render" actually just includes:
  ## (feel free to use just a subset of these, instead of "render")
  "bevy_render",        # Rendering framework core
  "bevy_core_pipeline", # Common rendering abstractions
  "bevy_sprite",        # 2D (sprites) rendering
  #"bevy_pbr",           # 3D (physically-based) rendering
  #"bevy_gltf",          # GLTF 3D assets format support
  "bevy_text",          # Text/font rendering
  "bevy_ui",            # UI toolkit

  # File formats:
  "png",
  "hdr",
  "vorbis",

  # These are other features that may be of interest:
  # (add any of these that you need)

  # Bevy functionality:
  #"wayland",              # Linux: Support Wayland windowing system
  "subpixel_glyph_atlas", # Subpixel antialiasing for text/fonts
  "serialize",            # Support for `serde` Serialize/Deserialize

  # File formats:
  "ktx2", # preferred format for GPU textures
  "dds",
  "jpeg",
  "bmp",
  "tga",
  "basis-universal",
  "zstd", # needed if using zstd in KTX2 files
  "flac",
  "mp3",
  "wav",

  # Development/Debug features:
  #"dynamic",      # Dynamic linking for faster compile-times
  #"trace",        # Enable tracing for performance measurement
  #"trace_tracy",  # Tracing using `tracy`
  #"trace_chrome", # Tracing using the Chrome format
  #"wgpu_trace",   # WGPU/rendering tracing
]