[package]
name = "rust_sat"
version = "0.3.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[target.wasm32-unknown-unknown]
runner = "wasm-server-runner"




[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rmp = ">=0.8"
rmp-serde = ">=0.15"

bevy_egui = "^0.30"
bevy_reflect = "^0.14"
nalgebra = "*" 
reqwest = { version = ">=0.11", features = ["json"] }
tokio = { version = ">=1", features = ["full"] }
serde_json = "*"
serde_derive = "*"
serde = "*"
egui_extras= {version = "^0.29", features=["svg"]}

sgp4 = "^2.2.0"
map_3d = ">=0.1.5"
chrono = ">=0.4"
rfd = ">=0.10"

bevy_svg = { git= "https://github.com/Weasy666/bevy_svg", default-features = false, features = ["2d"] }

bevy_prototype_lyon= "^0.12"
bevy_embedded_assets = "^0.11.0"

zmq = {version = ">=0.9.2", features=["vendored"],optional = true}


[features]
default = []
zmq_comm = ["dep:zmq"]

[patch.crates-io]
tuirealm =  {git="https://github.com/veeso/tui-realm"}

[dependencies.bevy]
version = "^0.14"
